force-app/main/default/objects/BMCServiceDesk__SYSPopupObjectFields__c/BMCServiceDesk__SYSPopupObjectFields__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the fields in pop-ups.</description>
    <label>Popup Details</label>
    <nameField>
        <label>Field API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSPopupObjectFields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>