force-app/main/default/objects/BMCServiceDesk__SYSPopupObjectFields__c/fields/BMCServiceDesk__dataType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__dataType__c</fullName>
    <description>Data types supported by EXTJS grid component data loader and will be used for sorting</description>
    <inlineHelpText>Data types supported by EXTJS grid component data loader and will be used for sorting</inlineHelpText>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>integer</fullName>
            </value>
            <value>
                <fullName>float</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>