force-app/main/default/objects/BMCServiceDesk__SYSPopupObjectFields__c/fields/BMCServiceDesk__fieldOrder__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__fieldOrder__c</fullName>
    <defaultValue>999</defaultValue>
    <label>Field Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>