force-app/main/default/objects/BMCServiceDesk__SYSPopupObjectFields__c/fields/BMCServiceDesk__fieldWidth__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__fieldWidth__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Field Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>