force-app/main/default/objects/BMCServiceDesk__SYSPopupObjectFields__c/fields/BMCServiceDesk__popupObjectId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__popupObjectId__c</fullName>
    <label>FKPopupObject</label>
    <referenceTo>BMCServiceDesk__SYSPopupObject__c</referenceTo>
    <relationshipLabel>SYSPopupObjectFields</relationshipLabel>
    <relationshipName>PopupObjectFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>